Fixed surefire settings